--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
             <img class="rounded-img" src="pics/home.jpg" alt="Oops..." />
             <h1 class="fw-light">MIPTish: Let's open new horizons together.</h1>
             <p class="lead text-muted">
-              MIPTish is not just a website. We help MIPT students to learn
-              foreign languages easily and amusingly. We do not allow our
-              students to be bored. Our new absolutely amazing approach helps
-              people not to notice how quick time flies, because our students
-              are happy to come to our classes! On this website we provide you
-              courses of chinese. If you want to learn english or french, we
-              recommend you to pass brilliant courses of our partners. To find
-              more information, please, click the corresponding button below.
+              MIPT is not just a website. We help MIPT students learn foreign
+              languages in an easy and fun way. We don't let our students get
+              bored. Our new absolutely amazing approach helps people not to
+              notice how quickly time flies, because our students love coming to
+              our classes! On this website we offer you Chinese courses. If you
+              want to learn English or French, we recommend that you take the
+              brilliant courses of our partners. For more information, please
+              click the appropriate button below.
             </p>
             <a
               href="https://linguatrip.com/ru/"
@@ -120,13 +120,15 @@
               French
             </a>
           </div>
-          <div>
-            <h3 class="fs-2">Vocabulary</h3>
-            <p>Here you can find some new words, which are helpful for you.</p>
+          <div class="container text-center my-5">
+            <h2 class="fw-light">Vocabulary</h2>
+            <p class="lead text-muted">
+              Here you can find some new words, which are helpful for you.
+            </p>
             <a href="term-list.html" class="btn btn-primary"
               >Watch vocabulary</a
             >
-            <a href="term-add.html" class="btn btn-primary" target="_blank"
+            <a href="term-add.html" class="btn btn-secondary" target="_blank"
               >Add new vocabulary</a
             >
           </div>
