--- a/lessons.html
+++ b/lessons.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Карточки для запоминания</title>
+    <title>MIPTish</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -98,40 +98,36 @@
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
         <div class="col">
           <div class="card">
-            <img src="pics/icon.png" class="card-img-top" alt="cat" />
+            <img src="pics/school.jpg" class="card-img-top" alt="school" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">学校</h5>
+              <p class="card-text">An institution for educating children..</p>
+              <a href="pics/answer1.png" class="btn btn-primary">Answer</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="cat" />
+            <img src="pics/class.jpg" class="card-img-top" alt="class" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">教室</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                A room, typically in a school, in which a class of students is
+                taught.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="pics/answer2.png" class="btn btn-primary">Answer</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="cat" />
+            <img src="pics/student.jpg" class="card-img-top" alt="student" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">学生</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                A person who is studying at a school or college..
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="pics/answer3.png" class="btn btn-primary">Answer</a>
             </div>
           </div>
         </div>
