--- a/term-add.html
+++ b/term-add.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MIPTish</title>
     <link rel="stylesheet" href="mystyle.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="favicon_io/site.webmanifest" />
     <style>
       .container {
         overflow: hidden;
@@ -30,7 +48,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Here you can add some new words in vocabulary list.</h1>
+      <h1>Here you can add some new words in the vocabulary list.</h1>
       <div class="tab tab-1">
         <table id="table" border="1">
           <tr>
@@ -39,9 +57,29 @@
             <th scope="col" class="py-3">Definition</th>
           </tr>
           <tr>
-            <td class="py-3">MIPTish</td>
+            <td class="py-3">1</td>
             <td class="py-3">学校</td>
             <td class="py-3">School</td>
+          </tr>
+          <tr>
+            <td class="py-3">2</td>
+            <td class="py-3">教室</td>
+            <td class="py-3">Classroom</td>
+          </tr>
+          <tr>
+            <td class="py-3">3</td>
+            <td class="py-3">学生</td>
+            <td class="py-3">Student</td>
+          </tr>
+          <tr>
+            <td class="py-3">4</td>
+            <td class="py-3">老师</td>
+            <td class="py-3">Teacher</td>
+          </tr>
+          <tr>
+            <td class="py-3">5</td>
+            <td class="py-3">课本</td>
+            <td class="py-3">Textbook</td>
           </tr>
         </table>
       </div>
